Bug 432103 - KDE Partition Manager crashed after trying to remove partition mount point
Summary: KDE Partition Manager crashed after trying to remove partition mount point
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.0
Platform: Fedora RPMs Linux
: HI crash
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords: drkonqi
: 433302 460874 464399 477735 481780 494961 514327 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-25 16:23 UTC by Gobinda Goshwami
Modified: 2026-01-08 19:05 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05.2
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (25.12 KB, text/plain)
2022-07-25 10:20 UTC, Paul Worrall
Details
New crash information added by DrKonqi (8.62 KB, text/plain)
2022-12-09 20:24 UTC, Omar Kotb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gobinda Goshwami 2021-01-25 16:23:51 UTC
Application: partitionmanager (4.2.0)

Qt Version: 5.15.2
Frameworks Version: 5.78.0
Operating System: Linux 5.10.9-201.fc33.x86_64 x86_64
Windowing system: X11
Distribution: Fedora 33 (Thirty Three)

-- Information about the crash:
- What I was doing when the application crashed:

This is exactly the steps I did,

1. Right click on selected (1.72TiB NTFS) unmounted partition, and select "Edit Mount Point" option from context menu.
2. Click "Remove" on "Edit Mount Point" dialog
3. Click "Save changes" on confirmation dialog
4. Crash

Hope this helps.

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Partition Manager (partitionmanager), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f4140bb2202 in bm_find(unsigned short const*, long long, long long, unsigned short const*, long long, unsigned char const*, Qt::CaseSensitivity) [clone .part.0] () from /lib64/libQt5Core.so.5
#5  0x00007f4140bbd501 in QtPrivate::findString(QStringView, long long, QStringView, Qt::CaseSensitivity) () from /lib64/libQt5Core.so.5
#6  0x00007f4140bbd949 in QString::indexOf(QString const&, int, Qt::CaseSensitivity) const () from /lib64/libQt5Core.so.5
#7  0x000055fb10294482 in EditMountPointDialog::accept_(MountPointAction) ()
#8  0x00007f4140cfb386 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#9  0x00007f4141850316 in QAbstractButton::clicked(bool) () from /lib64/libQt5Widgets.so.5
#10 0x00007f4141850cde in QAbstractButtonPrivate::emitClicked() () from /lib64/libQt5Widgets.so.5
#11 0x00007f4141852673 in QAbstractButtonPrivate::click() () from /lib64/libQt5Widgets.so.5
#12 0x00007f4141852855 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#13 0x00007f41417a1b1e in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#14 0x00007f4141760ec3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#15 0x00007f4141767eeb in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#16 0x00007f4140ccbbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#17 0x00007f4141766efa in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib64/libQt5Widgets.so.5
#18 0x00007f41417ba375 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#19 0x00007f41417bd6be in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#20 0x00007f4141760ec3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#21 0x00007f4140ccbbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#22 0x00007f4141107143 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#23 0x00007f41410e88cc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#24 0x00007f412f40c47e in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#25 0x00007f413f54796f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#26 0x00007f413f599758 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#27 0x00007f413f544d43 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#28 0x00007f4140d186f3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#29 0x00007f4140cca57b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#30 0x00007f4141960f8f in QDialog::exec() () from /lib64/libQt5Widgets.so.5
#31 0x000055fb102b10d0 in PartitionManagerWidget::onEditMountPoint() ()
#32 0x00007f4140cfb386 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#33 0x00007f414175a646 in QAction::triggered(bool) () from /lib64/libQt5Widgets.so.5
#34 0x00007f414175cf31 in QAction::activate(QAction::ActionEvent) () from /lib64/libQt5Widgets.so.5
#35 0x00007f41418dbe9a in QMenuPrivate::activateCausedStack(QVector<QPointer<QWidget> > const&, QAction*, QAction::ActionEvent, bool) () from /lib64/libQt5Widgets.so.5
#36 0x00007f41418e3512 in QMenuPrivate::activateAction(QAction*, QAction::ActionEvent, bool) () from /lib64/libQt5Widgets.so.5
#37 0x00007f41417a1b1e in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#38 0x00007f4141760ec3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#39 0x00007f4141767eeb in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#40 0x00007f4140ccbbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#41 0x00007f4141766efa in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib64/libQt5Widgets.so.5
#42 0x00007f41417ba8e3 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#43 0x00007f41417bd6be in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#44 0x00007f4141760ec3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#45 0x00007f4140ccbbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#46 0x00007f4141107143 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#47 0x00007f41410e88cc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#48 0x00007f412f40c47e in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#49 0x00007f413f54796f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#50 0x00007f413f599758 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#51 0x00007f413f544d43 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#52 0x00007f4140d186f3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#53 0x00007f4140cca57b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#54 0x00007f41418e0ef0 in QMenuPrivate::exec(QPoint const&, QAction*, std::function<QPoint (QSize const&)>) () from /lib64/libQt5Widgets.so.5
#55 0x00007f41418e1023 in QMenu::exec(QPoint const&, QAction*) () from /lib64/libQt5Widgets.so.5
#56 0x000055fb10286a21 in MainWindow::qt_metacall(QMetaObject::Call, int, void**) ()
#57 0x00007f4140cfb0a8 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#58 0x000055fb1028ca3e in PartitionManagerWidget::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) ()
#59 0x000055fb1028cfb3 in PartitionManagerWidget::qt_metacall(QMetaObject::Call, int, void**) ()
#60 0x00007f4140cfb0a8 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#61 0x00007f4141787559 in QWidget::customContextMenuRequested(QPoint const&) () from /lib64/libQt5Widgets.so.5
#62 0x00007f41417a28a5 in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#63 0x00007f414184b6f2 in QFrame::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#64 0x00007f4140ccb995 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#65 0x00007f4141760eb2 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#66 0x00007f4141768b63 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#67 0x00007f4140ccbbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#68 0x00007f41417bae96 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#69 0x00007f41417bd6be in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#70 0x00007f4141760ec3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#71 0x00007f4140ccbbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#72 0x00007f4141107143 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#73 0x00007f41410e88cc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#74 0x00007f412f40c47e in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#75 0x00007f413f54796f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#76 0x00007f413f599758 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#77 0x00007f413f544d43 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#78 0x00007f4140d186f3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#79 0x00007f4140cca57b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#80 0x00007f4140cd21b4 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#81 0x000055fb1027fd7f in main ()
[Inferior 1 (process 73452) detached]

Reported using DrKonqi
Comment 1 Andrius Štikonas 2021-02-20 10:14:05 UTC
*** Bug 433302 has been marked as a duplicate of this bug. ***
Comment 2 Thibault Molleman 2021-02-20 18:45:53 UTC
My bug report was indeed a duplicate of this one, matches very well
Can't manage to get a backtrace though even after rebuilding the package with the debug option on.
Comment 3 Paul Worrall 2022-07-25 10:20:31 UTC
Created attachment 150898 [details]
New crash information added by DrKonqi

partitionmanager (22.07.70) using Qt 5.15.5

1. Right-click on an unmounted btrfs partition and select "Edit Mount Point"
2. Click "Remove" (The partition was configured to mount at /srv/local_storage)
3. Click "Save Changes"

-- Backtrace (Reduced):
#3  QString::indexOf(QString const&, int, Qt::CaseSensitivity) const (this=this@entry=0x55db52b38210, str=..., from=from@entry=0, cs=cs@entry=Qt::CaseSensitive) at ../../include/QtCore/../../src/corelib/text/qstring.h:1070
#4  0x000055db52173ff0 in QString::contains(QString const&, Qt::CaseSensitivity) const (cs=Qt::CaseSensitive, s=..., this=0x55db52b38210) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:1362
#5  EditMountPointDialogWidget::removeMountPoint() (this=0x55db53110000) at ./src/gui/editmountpointdialogwidget.cpp:171
#6  0x000055db52173255 in EditMountPointDialog::accept_(MountPointAction) (this=0x55db52dd5a40, action=MountPointAction::Remove) at ./src/gui/editmountpointdialog.h:35
#7  0x00007fc2b043bd1e in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffd9577c430, r=0x55db52dd5a40, this=0x55db53139b90) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
Comment 4 Omar Kotb 2022-12-09 20:24:10 UTC
Created attachment 154464 [details]
New crash information added by DrKonqi

partitionmanager (22.08.3) using Qt 5.15.7

Clicking "Remove" and saving when editing the mount point of a partition on an external hard drive would always crash the program.

It's 2TB and formated as btrfs if that makes a difference.

-- Backtrace (Reduced):
#4  0x00007fac9217b6d8 in QString::indexOf(QString const&, int, Qt::CaseSensitivity) const () from /lib64/libQt5Core.so.5
#5  0x000055962c5d1e08 in EditMountPointDialog::accept_(MountPointAction) ()
#6  0x00007fac922dbc26 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#7  0x00007fac930a31d6 in QAbstractButton::clicked(bool) () from /lib64/libQt5Widgets.so.5
#8  0x00007fac930a344e in QAbstractButtonPrivate::emitClicked() () from /lib64/libQt5Widgets.so.5
Comment 5 Andrius Štikonas 2023-01-17 19:28:46 UTC
*** Bug 464399 has been marked as a duplicate of this bug. ***
Comment 6 Andrius Štikonas 2023-11-29 22:34:28 UTC
*** Bug 477735 has been marked as a duplicate of this bug. ***
Comment 7 Giorgio 2024-01-05 20:55:11 UTC
partitionmanager  version 23.08.3 
KDE frameworks 5.112.0
Qt 5.15.11

Clicking "Remove" and saving when editing the mount point of a partition of internal solid state disk always crash the program.

3 years old bug still valid.
Comment 8 Bug Janitor Service 2024-06-16 18:57:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/partitionmanager/-/merge_requests/47
Comment 9 Sreejith Subhash 2024-06-16 19:02:20 UTC
Git commit fc3bb7de5ee7a4af6646012baf7f4c78c95351a1 by Sreejith Subhash.
Committed on 16/06/2024 at 18:44.
Pushed by stikonas into branch 'master'.

Fixed crash caused by clicking remove mount point button

Signed-off-by: Sreejith Subhash <sreejithsubhash.foss@gmail.com>

M  +7    -3    src/gui/editmountpointdialogwidget.cpp

https://invent.kde.org/system/partitionmanager/-/commit/fc3bb7de5ee7a4af6646012baf7f4c78c95351a1
Comment 10 Andrius Štikonas 2024-06-16 20:08:23 UTC
Git commit ee14890037bd77cf87e6c0da2649bd9cab473d55 by Andrius Štikonas, on behalf of Sreejith Subhash.
Committed on 16/06/2024 at 20:08.
Pushed by stikonas into branch 'release/24.05'.

Fixed crash caused by clicking remove mount point button

Signed-off-by: Sreejith Subhash <sreejithsubhash.foss@gmail.com>

M  +7    -3    src/gui/editmountpointdialogwidget.cpp

https://invent.kde.org/system/partitionmanager/-/commit/ee14890037bd77cf87e6c0da2649bd9cab473d55
Comment 11 Andrius Štikonas 2024-07-10 18:19:27 UTC
*** Bug 481780 has been marked as a duplicate of this bug. ***
Comment 12 Andrius Štikonas 2024-07-10 19:24:13 UTC
*** Bug 460874 has been marked as a duplicate of this bug. ***
Comment 13 Andrius Štikonas 2024-10-17 21:45:42 UTC
*** Bug 494961 has been marked as a duplicate of this bug. ***
Comment 14 Andrius Štikonas 2026-01-08 19:05:46 UTC
*** Bug 514327 has been marked as a duplicate of this bug. ***