Fixed crash caused by clicking remove mount point button

BUG: 432103

Signed-off-by: Sreejith Subhash <sreejithsubhash.foss@gmail.com>